[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/negative_pb.png" type="Texture" id=1]
[ext_resource path="res://assets/images/under_positive_pb.png" type="Texture" id=2]
[ext_resource path="res://assets/images/under_negative_pb.png" type="Texture" id=3]
[ext_resource path="res://assets/images/positive_pb.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui/double_progress_bar.gd" type="Script" id=5]

[node name="DoubleProgressBar" type="Control"]
rect_min_size = Vector2( 176, 60 )
script = ExtResource( 5 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]

[node name="NegativeProgress" type="TextureProgress" parent="HBoxContainer"]
margin_right = 86.0
margin_bottom = 50.0
max_value = 25.0
rounded = true
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 1 )
fill_mode = 1

[node name="PositiveProgress" type="TextureProgress" parent="HBoxContainer"]
margin_left = 90.0
margin_right = 176.0
margin_bottom = 50.0
max_value = 25.0
rounded = true
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="InfoPanel" type="PanelContainer" parent="."]
visible = false
margin_left = -101.0
margin_top = 3.0
margin_right = -10.0
margin_bottom = 49.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 84.0
margin_bottom = 39.0
alignment = 1

[node name="ValueName" type="Label" parent="InfoPanel/VBoxContainer"]
margin_right = 77.0
margin_bottom = 14.0
text = "Value Name"
align = 1

[node name="Value" type="Label" parent="InfoPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 77.0
margin_bottom = 32.0
text = "+0"
align = 1
valign = 1
